// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#DefaultCellRenderer should render DefaultCellRenderer 1`] = `
<DocumentFragment>
  <div
    aria-label="value"
    class="theme-td-cell td-cell"
  >
    <div
      class="theme-td-default-cell td-default-cell"
    >
      <span>
        value
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`#DefaultCellRenderer should render the default cell on loading state 1`] = `
<DocumentFragment>
  <div
    class="theme-td-cell td-cell"
  >
    <span
      aria-hidden="true"
      class="theme-skeleton theme-isBlock theme-skeletonParagraph theme-size-M"
    />
  </div>
</DocumentFragment>
`;
